# anchor-janecek

./: Anchor.toml  README.md  package-lock.json  package.json
obsidian/: Untitled.canvas  janecek_method.canvas
obsidian/.obsidian/: workspace.json
programs/janecek-method/: Cargo.toml
programs/janecek-method/src/: error.rs  lib.rs
programs/janecek-method/src/instructions/: add_party.rs  add_party_nft.rs  create_voter.rs  initialize.rs  initialize_voting.rs  mint.rs  mod.rs  set_emergency.rs  update_party_info.rs  update_voting_info.rs  vote.rs  vote_nft.rs
programs/janecek-method/src/states/: mod.rs  party.rs  voter.rs  voting_info.rs
tests/: env.ts  init_env.ts  janecek-method-test.ts
tests/Party/: add-party.ts  update-nft-info.ts
tests/Update/: update_voting_info.ts
tests/Vote/: vote.ts
tests/Voter/: add-voter.ts
tests/addParty/: add-party.ts
tests/initialize/: initialize-voting.ts
tests/nft/: test-nft.ts
tests/update/: update_voting_info.ts
